--- a/locale/de/LC_MESSAGES/easyabc.po
+++ b/locale/de/LC_MESSAGES/easyabc.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: EasyABC 1.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-05-26 20:46+0200\n"
-"PO-Revision-Date: 2025-05-27 14:58+0200\n"
+"PO-Revision-Date: 2025-05-27 17:16+0200\n"
 "Last-Translator: Bodo Meißner <bomm@users.sourceforge.net>\n"
 "Language-Team: EasyABC <info@nilsliberg.se>\n"
 "Language: de_DE\n"
@@ -563,6 +563,7 @@ msgstr "Farben für die ABC-Code-Hervorhebung im Editor"
 msgid "Note highlight color"
 msgstr "Farbe für hervorgehobene Noten"
 
+# keep translation short to reduce space
 #: easy_abc.py:3202
 msgid "Note highlight color when follow score"
 msgstr "Farbe für aktuelle Note bei Folgen in Partitur"
@@ -1431,7 +1432,7 @@ msgstr "Neue Datei erstellen"
 
 #: easy_abc.py:6438
 msgid "&Open..."
-msgstr "Ö&ffnen (Strg+O)..."
+msgstr "Ö&ffnen..."
 
 #: easy_abc.py:6438
 msgid "Open an existing file"
@@ -1519,7 +1520,7 @@ msgstr "als PDF &Dateien..."
 
 #: easy_abc.py:6464
 msgid "&Save"
-msgstr "&Speichern (Strg+S)"
+msgstr "&Speichern"
 
 #: easy_abc.py:6464
 msgid "Save the active file"
@@ -1527,7 +1528,7 @@ msgstr "Die aktuelle Datei speichen"
 
 #: easy_abc.py:6465
 msgid "Save &As..."
-msgstr "Speichern &als (Strg+Shift+S)..."
+msgstr "Speichern &als..."
 
 #: easy_abc.py:6465
 msgid "Save the active file with a new filename"
@@ -1535,7 +1536,7 @@ msgstr "Die aktuelle Datei unter neuem Dateinamen speichern"
 
 #: easy_abc.py:6467
 msgid "&Print..."
-msgstr "&Drucken (Strg+P)..."
+msgstr "&Drucken..."
 
 #: easy_abc.py:6467
 msgid "Print the selected tune"
@@ -1543,7 +1544,7 @@ msgstr "Das ausgewählte Stück drucken"
 
 #: easy_abc.py:6468
 msgid "&Print preview"
-msgstr "&Druckvorschau (Strg+Shift+P)"
+msgstr "&Druckvorschau"
 
 #: easy_abc.py:6469
 msgid "P&age Setup..."
@@ -1605,7 +1606,7 @@ msgstr "Aktuelle Auswahl kopieren und in die Zwischenablage legen"
 #, fuzzy
 #| msgid "&Paste\tCtrl+V"
 msgid "&Paste"
-msgstr "&Einfügen\tCtrl+V"
+msgstr "&Einfügen"
 
 #: easy_abc.py:6480
 msgid "Paste clipboard contents"
@@ -1615,7 +1616,7 @@ msgstr "Inhalt der Zwischenablage einfügen"
 #, fuzzy
 #| msgid "&Delete\tDel"
 msgid "&Delete"
-msgstr "&Löschen\tDel"
+msgstr "&Löschen"
 
 #: easy_abc.py:6481
 msgid "Delete the selection"
@@ -1661,27 +1662,27 @@ msgstr "Notenwert halbieren"
 #, fuzzy
 #| msgid "A&lign bars\tCtrl+Shift+A"
 msgid "A&lign bars"
-msgstr "&Taktstriche ausrichten\tCtrl+Shift+A"
+msgstr "&Taktstriche ausrichten"
 
 #: easy_abc.py:6494
 msgid "&Find..."
-msgstr "&Suchen (Strg+F)..."
+msgstr "&Suchen..."
 
 #: easy_abc.py:6496
 #, fuzzy
 #| msgid "&Find Next\tF3"
 msgid "Find &Next"
-msgstr "&Nächstes suchen\tF3"
+msgstr "&Nächstes suchen"
 
 #: easy_abc.py:6497
 msgid "&Replace..."
-msgstr "&Ersetzen (Strg+H)..."
+msgstr "&Ersetzen..."
 
 #: easy_abc.py:6499
 #, fuzzy
 #| msgid "&Select all\tCtrl+A"
 msgid "&Select all"
-msgstr "&Alles auswählen\tCtrl+A"
+msgstr "&Alles auswählen"
 
 #: easy_abc.py:6500
 msgid "&Settings"
@@ -2654,6 +2655,7 @@ msgstr "Ändere das Instrument"
 msgid "Change channel"
 msgstr "Ändere den Kanal"
 
+# MIDI percussion instrument names are currently not translated
 #: tune_actions.py:1322
 msgid "High Q"
 msgstr ""
@@ -3935,7 +3937,7 @@ msgid ""
 "Everything above the first X: is the file header. The directives here apply "
 "to all the tunes that follow."
 msgstr ""
-"Alles oberhalb des ersten \"X:\" sind die Kopfzeilen. Diese Anweisungen "
+"Alles oberhalb des ersten X: sind die Datei-Kopfzeilen. Diese Anweisungen "
 "werden auf alle folgenden Stücke angewandt."
 
 #: tune_elements.py:780
@@ -3986,10 +3988,10 @@ msgid ""
 "to provide a shortcut for the !symbol! syntax. For example, to assign the "
 "letter T to represent the trill, you can write: U: T = !trill!"
 msgstr ""
-"Die Bedeutung der Zeichen H-W und h-w und des Symbols ~ kann über das U: -"
+"Die Bedeutung der Buchstaben H-W und h-w und des Symbols ~ kann über das U: -"
 "Feld definiert werden. Damit kann man Abkürzungen für die !symbol! - Syntax "
 "erstellen. Um beispielsweise dem T die Bedeutung eines Trillers zu geben, "
-"können Sie schreiben: \"U: T = !trill!"
+"können Sie schreiben: U: T = !trill!"
 
 #: tune_elements.py:836
 msgid "Unknown symbol"
